fix: update line-height in body for improved text readability

--- a/style.css
+++ b/style.css
@@ -114,7 +114,7 @@ body{
 
     color: white;
 
-    line-height: 1.5;
+    line-height: 1.2;
 
 
     word-break: break-word;
